# compono-telegram-shop

./: .env.example  .gitignore  Dockerfile  Dockerfile.local  Makefile  PHASE4-MIGRATION.md  README.md  README.ru_RU.md  docker-compose.db-local.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.external.yml  docker-compose.prod.internal.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
app/: __main__.py
docs/: platega.md
estimand_sdk/: __init__.py  assignment.py  client.py  evaluator.py  models.py
hooks/: pre-commit
src/: lifespan.py
tests/: conftest.py  test_access_service.py  test_admin_feature_flag.py  test_affiliate_link.py  test_api_client.py  test_api_identity_client.py  test_app_router_removed.py  test_billing_client.py  test_billing_models.py  test_broadcast_service.py  test_calls_beta_message_contract.py  test_calls_conf_render.py  test_cancel_survey_router.py  test_cancel_survey_scheduling.py  test_cancel_survey_task.py  test_channel_incentive_service.py  test_checkout_instrumentation.py  test_command_service.py  test_contract.py  test_converters.py  test_crypto_assets.py  test_di_container.py  test_email_service.py  test_experiment_service.py  test_funnel_report_task.py  test_importer_service.py  test_kafka_consumer_supervision.py  test_lifespan.py  test_loyalty_reward_service.py  test_menu_dialog.py  test_menu_getter.py  test_notification_consumer_poison.py  test_notification_dedup.py  test_notification_translations.py  test_on_calls_beta.py  test_on_get_trial.py  test_on_start_command.py  test_plan_service.py  (+18 more)
(+303 files in other folders)
